--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_app_init
 version: 0.1.0
 environment:
   sdk: '>=3.1.0-163.1.beta <4.0.0'
-  flutter: ">=3.12.0"
+  flutter: ">=3.12.0-1.1.pre"
 dependencies:
   flutter:
     sdk: flutter
