--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_app_init
-version: 0.1.7
+version: 0.1.8
 environment:
-  sdk: '>=3.1.0-163.1.beta <4.0.0'
-  flutter: ">=3.12.0-1.1.pre"
+  sdk: '>=3.0.5 <4.0.0'
+  flutter: ">=3.10.5"
 dependencies:
   flutter:
     sdk: flutter
