--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,17 @@
 name: flutter_app_init
-version: 0.3.2
+version: 0.3.3
 environment:
-  sdk: '>=3.0.5 <4.0.0'
-  flutter: ">=3.10.5"
+  sdk: '>=3.1.0 <4.0.0'
+  flutter: ">=3.13.0"
 dependencies:
   flutter:
     sdk: flutter
   easy_localization: 3.0.2
-  sentry_flutter: 7.8.0
-  realm: 1.3.0
-  loader_overlay: 2.2.0
+  sentry_flutter: 7.9.0
+  realm: 1.4.0
+  loader_overlay: 2.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: 2.0.2
 flutter:
