--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,17 @@
 name: flutter_app_init
-version: 0.4.3
+version: 0.4.4
 environment:
-  sdk: '>=3.1.3 <4.0.0'
-  flutter: ">=3.13.6"
+  sdk: '>=3.4.0-16.0.dev <4.0.0'
+  flutter: ">=3.19.0-3.0.pre.52"
 dependencies:
   flutter:
     sdk: flutter
   easy_localization: 3.0.3
-  sentry_flutter: 7.10.1
-  realm: 1.5.0
-  loader_overlay: 2.3.2
+  sentry_flutter: 7.14.0
+  realm: 1.6.1
+  loader_overlay: 4.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: 2.0.3
+  flutter_lints: 3.0.1
 flutter:
