--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,21 @@
 name: flutter_app_init
-version: 0.6.7
+version: 0.6.8
 environment:
-  sdk: '>=3.4.0-24.0.dev <4.0.0'
-  flutter: ">=3.19.0-5.0.pre.44"
+  sdk: '>=3.2.6 <4.0.0'
+  flutter: ">=3.16.9"
 dependencies:
   flutter:
     sdk: flutter
   easy_localization: 3.0.3
-  sentry_flutter: 7.14.0
-  realm: 1.6.1
+  sentry_flutter: 7.15.0
+  realm: 1.7.0
   loader_overlay: 4.0.0
   shared_preferences: 2.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: 3.0.1
+  merciless_flutter_lints:
+    git:
+      url: https://github.com/EdgarJan/merciless_flutter_lints.git
+      ref: '41868a7'
 flutter:
