--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,15 @@
 name: flutter_app_init
-version: 1.1.0
+version: 1.1.1
 environment:
-  sdk: '>=3.4.1 <4.0.0'
-  flutter: ">=3.22.1"
+  sdk: '>=3.5.3 <4.0.0'
+  flutter: ">=3.24.3"
 dependencies:
   flutter:
     sdk: flutter
   easy_localization: 3.0.7
-  sentry_flutter: 8.2.0
-  realm: 3.0.0
-  loader_overlay: 4.0.0
+  # sentry_flutter: 8.2.0
+  realm: 3.4.1
+  loader_overlay: 4.0.2+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -17,4 +17,3 @@ dev_dependencies:
     git:
       url: https://github.com/EdgarJan/merciless_flutter_lints.git
       ref: '41868a7'
-flutter:
